# dotfiles

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .rgignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHI  PKGBUILD  README.md  README.rst  RELEASE.md  coc-settings.json  columnize_xdefaults.sh  go.work  init.vim  limits.patch  mise.toml  nvimrc  packages.txt  reindeer.toml  setup.sh  vimrc  zsh-completion-sync.plugin.zsh
.github/workflows/: copybara.yml  kernel.yml
Code/: settings.json
aiopanel/: config.py
alacritty/: alacritty-base.yml  alacritty-laptop.yml  alacritty.yml
autoload/: color_helper.vim  indent_guides.vim
bootstrap/: reindeer
bspwm/: bspwmrc  external_rules
cargo/: config.toml
ci/: copybara.sh
cmd/guest-init/: main_test.go
cmd/matchlock/: cmd_kernel.go  cmd_kernel_test.go  cmd_run.go  cmd_run_test.go
colors/custom/: solarized-dark.xresources  solarized-light.xresources
compton/: compton.conf
configs/Code/: keybindings.json  settings.json
configs/agents/: AGENTS.md
configs/aiopanel/: config.py
configs/alacritty/: alacritty-base.toml  alacritty-base.yml  alacritty-desktop.toml  alacritty-desktop.yml  alacritty-laptop.toml
configs/atuin/: config.toml
configs/bash/: bashrc
configs/bspwm/: bspwmrc  external_rules
configs/bun/: bunfig.toml
configs/cargo/: config.toml
configs/claude/: settings.json
configs/dell-xps15/: README.md
configs/direnv/: direnvrc
configs/docs-svc/: check.sh  default.nix
configs/fonts/: .gitignore
configs/gdb/: gdbinit  init3.py
configs/gh/: config.yml
configs/ghc/: ghci.conf
configs/git/: .gitignore  attributes  config  ignore
configs/greek-letters/: greek-letters.txt
configs/gtk-3.0/: colors.css  settings.ini
configs/homebrew/: Brewfile  install.sh
configs/iterm2/: com.googlecode.iterm2.plist
configs/jj/: .gitignore  config.toml
configs/librespot/: librespot.service
configs/lolcate/: config.toml
configs/macos/: setup.sh
configs/main/: .XCompose  .Xresources  .bazelrc  .haskeline  .ideavimrc  .npmrc  .pokerc  .psqlrc  .xinitrc  .yarnrc.yml
configs/mpv/: mpv.conf
configs/nix/: .gitignore  cube.sh  default.nix  env.nix  env.sh  flake.nix  hls.nix  icecream.sh  local-packages.nix  packages.nix  profile.nix  release.nix  snowflake.sh  system-profile.nix  thinnernix.sh  voracle.sh
configs/nix.conf/: .gitignore  nix.conf  repl.nix
configs/nvim/: .gitignore  BUGS.md  README.md  coc-settings.fake.json  coc-settings.json  coc-settings.real.json  ginit.vim  init.lua  init.vim  lateinit.lua  lazy-lock.json  legacy_init.vim  minimalrc.vim  setup.sh
configs/polkadots/: config.py  dotfile_repo
configs/qemu-box/: osx  win7
configs/ripgrep/: ripgreprc
configs/rofi/: config.rasi  screenshot.sh
configs/support/: mkGhcShell.nix  pquartus  start-ssh-agent
configs/sxhkd/: sxhkdrc
configs/zsh/: aliases.zsh  completion.zsh  keys.zsh  opts.zsh  prompt.zsh-theme  (+7 more)
dell-xps15/: setup.sh
docs-svc/: .deploy_config  .gitignore  README.md  add_css.py  build.sh  default.nix  deploy.sh  docs-rsync-pull.service  docs-rsync.service  docs-rsync.timer  docs-service.nix  docs.service  docs.service.in  files-pull.txt  files.txt  install-local.sh  nginx.conf  none  pull.sh
experiments/: .deploy_config  deploy.sh  files.txt  index.html
fonts/: .gitignore
gh/: config.yml
git/: config  ignore
greek-letters/: README.md  greek-letters.txt
gtk3/: settings.ini
ipython/: ipython_config.py
kde-color-schemes/: Jaded.colors
lighthouse/: lighthouserc
main/: .XCompose  .Xresources  .gtkrc-2.0  .pentadactylrc  .xinitrc
nix/: default.nix  packages.nix  patches.nix  polkadots.nix
nvim/: LICENSE  README.md  coc-settings.json  colortest.sh  init.vim  setup.sh
pkg/: .gitignore
plugin/: indent_guides.vim
polkadots/: config.json  config.py  dotfile_repo
powershell/: Microsoft.PowerShell_profile.ps1
programs/: README.md
programs/cargo-info/: .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md
programs/cargo-info/src/: crates.rs  main.rs
programs/ghostjar/: pyproject.toml
programs/ghostjar/ghostjar/: find_grep_guard.py
programs/ghostjar/lid/: .gitignore  BUCK  DESIGN.md  README.md  SPEC.md  go.mod  go.sum
programs/ghostjar/lid/cmd/lid/: BUCK  main.go
programs/ghostjar/lid/examples/: lid.star
programs/ghostjar/lid/internal/config/: BUCK  bake_cache_test.go  claude_subscription_test.go  config.go  defaults_test.go  errors.go  errors_test.go  eval.go  github_app_test.go  keychain_test.go  merge_test.go  mount_test.go  persist_claude_test.go  property_test.go
programs/ghostjar/lid/internal/runner/: BUCK  bake.go  bake_test.go  claude_oauth.go  claude_oauth_test.go  discover.go  discover_test.go  github_app.go  github_app_test.go  guestuser.go  guestuser_test.go  persist.go  persist_test.go  run.go  secrets.go  secrets_test.go  seed.go  seed_test.go  shellquote.go  shellquote_test.go  translate.go  translate_github_app_test.go  translate_oauth_test.go  translate_test.go
programs/ghostjar/tests/: test_find_grep_guard.py
programs/idevicesyswowog/: .gitignore  Cargo.toml  README.md
programs/idevicesyswowog/src/: main.rs
programs/nvimsplit/: Cargo.toml  README.md  default.nix  package.nix
programs/nvimsplit/src/: main.rs
programs/nvremote/: Cargo.toml  package.nix
programs/nvremote/src/: main.rs
programs/vim-swapfile-header/: Cargo.toml  package.nix  sample
programs/vim-swapfile-header/src/: lib.rs  main.rs
pwaygwoumd/: README.md
qemu-box/: arch  win10
qt4/: Trolltech.conf
rofi/: config  config.rasi
scripts/: build-kernel.sh  publish-kernel.sh
src/: crates.rs  errors.rs  main.rs
stickers/: README.md  jj girl.afdesign  jj-lesbian.afdesign  katzen keyboard antifa.afdesign  test failed.afdesign  trams rights - printed.sla
sxhkd/: sxhkdrc
system/: README.md
thinkpad/: README.md  setup.sh  tlp  trackpoint-setup  trackpoint-setup.service  user-setup.sh
toolchains/: BUCK  hermetic_go_toolchain.bzl  hermetic_rust_toolchain.bzl  update_hermetic_toolchain.py
vim-plugins/: copy.bara.sky  spdx_checker.bara.sky
(+625 files in other folders)
