[package]
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
categories = ["development-tools::cargo-plugins"]
description = "Extends cargo to query crates.io registry for crates details"
documentation = "https://docs.rs/cargo-info"
homepage = "https://gitlab.com/imp/cargo-info"
keywords = ["cargo", "info", "subcommand"]
license = "Apache-2.0/MIT"
name = "cargo-info"
repository = "https://gitlab.com/imp/cargo-info.git"
version = "0.5.8"

[badges]
travis-ci = { repository = "imp/cargo-info" }
gitlab = { repository = "imp/cargo-info" }

[dependencies]
chrono = "0.3"
chrono-humanize = "0.0.8"
error-chain = "0.10"
json = "0.11"
pager = "0.9"
requests = "0.0.28"

[dependencies.clap]
features = ["unstable"]
version = "2.0"

[features]
default = []
