[package]
name = "idevicesyswowog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.2"
lazy_static = "1.4.0"
owo-colors = "2.0.0"
regex = "1.5.5"
rusqlite = { version = "0.25.1", features = ["functions"] }
tui = "0.15.0"
