[package]
name = "nvremote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
clap = "3.0.0-beta"
color-eyre = "0.5.10"
futures = "0.3.16"
lazy_static = "1.4.0"
log = "0.4.14"
nvim-rs = { git = "https://github.com/lf-/nvim-rs", branch = "x-platform-path", features = ["use_tokio"] }
regex = "1.5.4"
shellexpand = "2.1.0"
simplelog = "0.9.0"
tokio = { version = "1.1.1", features = ["full"] }
vim-swapfile-header = { path = "../vim-swapfile-header" }

[features]
