[package]
name = "nvremote"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
color-eyre = "0.5.10"
futures = "0.3.16"
lazy_static = "1.4.0"
log = "0.4.14"
nvim-rs = { version = "0.5.0", features = ["use_tokio"] }
regex = "1.5.4"
shellexpand = "2.1.0"
simplelog = "0.9.0"
tokio = { version = "1.28.1", features = ["macros", "rt", "fs"] }
vim-swapfile-header = { path = "../vim-swapfile-header" }

[features]
