[package]
name = "vim-swapfile-header"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
nom = "6.1.2"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
structopt = "0.3.21"
